--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
